# ca_bertopic

./: .gitignore  README.md  main.py  pyproject.toml  run_experiment.py
experiments/: experiment_1.yaml  experiment_2.yaml
notebooks/: autoencoder_experiments.ipynb  model_comparison.ipynb  model_comparison_pipeline.ipynb  mvc_experiments.ipynb  octis_interface.ipynb  temp.ipynb
src/: append_umap.py  data.py  evaluation.py  models.py  mvc_wrapper.py  training.py  utils.py
src/scripts/: build_yelp_dataset.py  generate_embeddings.py  run_experiment.py
