[project]
name = "ca-bertopic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "polars>=1.35.2",
    "sentence-transformers>=5.1.2",
]

[dependency-groups]
dev = [
    "nbstripout>=0.8.2",
]
