[project]
name = "ca-bertopic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "bertopic>=0.17.3",
    "cucim-cu13==25.10.* ; sys_platform == 'linux'",
    "cudf-cu13==25.10.* ; sys_platform == 'linux'",
    "cugraph-cu13==25.10.* ; sys_platform == 'linux'",
    "cuml-cu13==25.10.* ; sys_platform == 'linux'",
    "cuvs-cu13==25.10.* ; sys_platform == 'linux'",
    "cuxfilter-cu13==25.10.* ; sys_platform == 'linux'",
    "dask-cudf-cu13==25.10.* ; sys_platform == 'linux'",
    "gensim>=4.4.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "nbstripout>=0.8.2",
    "numpy<2.2",
    "nx-cugraph-cu13==25.10.* ; sys_platform == 'linux'",
    "octis>=1.8.3",
    "polars>=1.35.2",
    "pylibraft-cu13==25.10.* ; sys_platform == 'linux'",
    "raft-dask-cu13==25.10.* ; sys_platform == 'linux'",
    "rbo>=0.1.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"
